Changed the name of stack.*, added a stack main to also demonstrate the STL stack.

--- a/Week5/Makefile
+++ b/Week5/Makefile
@@ -47,4 +47,4 @@ leaky:	leaky.cc
 # Clean up things
 clean:
 	rm -f *.o
-	rm simple-indirection ref-deref dynarray dynobj vectorexample 2dvectorexample leaky
+	rm -f simple-indirection ref-deref dynarray dynobj vectorexample 2dvectorexample leaky
