--- a/Week6/Makefile
+++ b/Week6/Makefile
@@ -1,41 +1,40 @@
+### --- Environmental Variables --- ###
 
+PROGRAMS=stack-main
 
-# Let's get used to using environmental variables for some things
-# Here we'll use:
-#   $CC for the compiler
-#   $CFLAGS to set where the include directory is (here, ".")
+# Compiler/Linker env vars
 CC=g++
-CFLAGS=-I. 
+CFLAGS=-I$(INCDIR) 
+LDFLAGS=
+LINKER=g++
 
-# Build all examples
-all:	stack-main simplestack-test
+# Make env vars for the different directories we will use
+OBJDIR=./obj
+SRCDIR=./src
+INCDIR=./inc
+BINDIR=./bin
 
-
-## First example.  The "$@" here is a shortcut in gmake and means "the target".  The
-## "$<" means the first dependency.  It is customary for this to be the source file
-## you are building.
-stack-main:	stack-main.cc simplestack.o node.o
-	$(CC) $(CFLAGS) -o $@  $< *.o
-
-
-# If we include a main() function in multiple C++ source files, we'll get
-# an error.  But we can use the pre-processor to help us.  Here I go ahead
-# and define UNITTEST while compiling, which should cause the pre-processor
-# to include the main() that's in stack.cc.
-simplestack-test:	simplestack.cc simplestack.h node.o
-	$(CC) $(CFLAGS) -DUNITTEST  -o $@  $<  node.o
-
-# Otherwise, if we're just going to link to the code from some other
-# executable, we can build the object file without the main by leaving
-# out the define for UNITTEST
-simplestack.o:	simplestack.cc simplestack.h node.h
-	$(CC) $(CFLAGS) -c $<
-
-node.o:	node.cc node.h
-	$(CC) $(CFLAGS) -c $< 
+# Create file groups for each directory
+SOURCES  := $(wildcard $(SRCDIR)/*.cc)
+INCLUDES := $(wildcard $(SRCDIR)/*.h)
+OBJECTS  := $(SOURCES:$(SRCDIR)/%.cc=$(OBJDIR)/%.o)
+# ^^ i.e., a .o file in OBJDIR for every .cc file in SRCDIR
 
 
-# Clean up things
+### --- Build Target Rules --- ###
+
+# Rule 1: For the target, link all objects into executable
+$(BINDIR)/$(PROGRAMS):	$(OBJECTS)
+	$(LINKER) -o $@  $(OBJECTS) $(LDFLAGS) 
+
+# Rule 2: For every object file in the object file set,
+# compile the related cc file
+$(OBJECTS):	$(OBJDIR)/%.o : $(SRCDIR)/%.cc
+	$(CC) $(CFLAGS)  -o $@  -c $<
+
+
+# Use ".PHONY" so we don't confuse with a target named "clean"
+.PHONY:	clean
 clean:
-	rm -f *.o
-	rm -f stack-main simplestack-test
+	rm -f $(OBJECTS)
+	rm -f $(BINDIR)/$(PROGRAMS)
