--- a/Week7/Makefile
+++ b/Week7/Makefile
@@ -1,9 +1,9 @@
 ### --- Environmental Variables --- ###
 
 ## RPW:  Uncomment one of these, comment the others
-PROGRAM=binarytree
+#PROGRAM=binarytree
 #PROGRAM=sortedlist
-#PROGRAM=selectandsort
+PROGRAM=selectandsort
 
 # Compiler/Linker env vars
 CC=g++
