Fixed typo again ..

--- a/InClassExamples/Week8/Makefile
+++ b/InClassExamples/Week8/Makefile
@@ -2,7 +2,7 @@
 
 all: FruitList
 
-FruitList:  FruitList.o  FruitNode.h
+FruitList:  FruitList.o  FruitNode.o
 	g++ -o $@  $*
 
 FruitList.o:  FruitList.cpp FruitNode.h
