--- a/Week14/Makefile
+++ b/Week14/Makefile
@@ -1,2 +1,2 @@
 RecursionExample: RecursionExample.cc
-		g++ -o RecursionExample RecursionExample.cc
+		g++ --std=c++11 -o RecursionExample RecursionExample.cc
