Dr Wiegand talking too much about this and cleaning up code

--- a/InClassExamples/Week3/Makefile
+++ b/InClassExamples/Week3/Makefile
@@ -1,15 +1,15 @@
 EXECUTABLE=BankProgram
-
+CFLAGS=-c -I.
 all: $(EXECUTABLE)
 
 $(EXECUTABLE):  BankAccount.o BankMain.o
 	g++ -o $@  BankAccount.o BankMain.o
 
 BankAccount.o:  BankAccount.cc BankAccount.h
-	g++ -c BankAccount.cc
+	g++ $(CFLAGS) BankAccount.cc
 
 BankMain.o:  BankMain.cc BankAccount.h
-	g++ -c BankMain.cc
+	g++ $(CFLAGS) BankMain.cc
 
 clean:
 	rm -f *.o  $(EXECUTABLE)
