Added makefile changes from our week 1 lecture

--- a/Week2/Makefile
+++ b/Week2/Makefile
@@ -9,6 +9,14 @@ simple-structsenums: simple-structsenums.o
 simple-structsenums.o: simple-structsenums.cc
 	g++ -c simple-structsenums.cc
 
+
+file-streams.exe: file-streams.o
+	g++ -o file-streams.exe  file-streams.o
+	
+# Compile the source file for file-styreams to an object file
+file-streams.o: file-streams.cc
+	g++ -c file-streams.cc
+
 # Remove any unnecessary temporary files resulting from builds
 clean:
 	rm -f *.o
