--- a/InClassExamples/Week7/Makefile
+++ b/InClassExamples/Week7/Makefile
@@ -1,6 +1,8 @@
 CFLAGS=-I. -c
 
-all: llmain.exe
+.PHONY: all clean otherstuff
+
+all: llmain.exe otherstuff
 
 llmain.exe: llmain.o node.o
 	g++ $^  -o $@
@@ -11,10 +13,14 @@ llmain.o:  llmain.cc  node.h
 node.o: node.cc node.h
 	g++ $(CFLAGS)  $< 
 
+
+otherstuff: OldStyleByRefPass.cc PlayingWithPointers.cc
+	g++ -o PlayingWithPointers.exe  PlayingWithPointers.cc
+	g++ -o OldStyleByRefPass.exe  OldStyleByRefPass.cc
+
 clean:
 	rm -f *.o  *.exe
 
 cleanwin:
 	del *.o
 	del *.exe
-	
