RPW added an inheritence example

--- a/InClassExamples/Week11/Makefile
+++ b/InClassExamples/Week11/Makefile
@@ -1,14 +1,19 @@
+CFLAGS=-c -I.
+
 all: book.exe
 
-book.exe:  Book.o  main.o
-	g++ -o $@  Book.o  main.o
+book.exe:  Book.o  main.o Textbook.o
+	g++ -o $@  Book.o  main.o Textbook.o
 
+
+Textbook.o: Textbook.cc Textbook.h
+	g++ $(CFLAGS) $<
 
 Book.o: Book.cc Book.h
-	g++ -c $<
+	g++ $(CFLAGS) $<
 
 main.o: main.cc  Book.h
-	g++ -c $<
+	g++ $(CFLAGS) $<
 
 clean:
 	rm -f *.o  *.exe
