Made a more general function to print ranges from list of strings

--- a/InClassExamples/Week2/Makefile
+++ b/InClassExamples/Week2/Makefile
@@ -1,16 +1,25 @@
-all: fruitlister.exe
+all: fruitlister1.exe fruitlister2.exe
 
 # Link to form the executable
-fruitlister.exe:  simplearray-eg.o
-	g++ simplearray-eg.o   -o fruitlister.exe
+fruitlister2.exe:  arrayfunction.o
+	g++ arrayfunction.o   -o $@
+
+# Compile to an object file
+arrayfunction.o: arrayfunction.cc
+	g++ -c arrayfunction.cc
+
+
+# Link to form the executable
+fruitlister1.exe:  simplearray-eg.o
+	g++ simplearray-eg.o   -o fruitlister1.exe
 
 # Compile to an object file
 simplearray-eg.o: simplearray-eg.cc
 	g++ -c simplearray-eg.cc
 
 clean:
-	rm -f simplearray-eg.o fruitlister.exe
+	rm -f *.o fruitlister*.exe
 
 cleanwin:
-	del simplearray-eg.o
-	del fruitlister.exe
+	del *.o
+	del fruitlister*.exe
